[project]
name = "graiax-text2img-playwright"
version = "0.4.0"
description = "基于 Playwright 的适用于 Graia 的文转图工具"
authors = [
    {name = "Redlnn", email = "w731347477@gmail.com"},
    {name = "BlueGlassBlock", email = "blueglassblock@outlook.com"}
]
dependencies = [
    "graiax-playwright>=0.2.3,<0.3.0",
    "launart>=0.6.3,<0.7.0",
    "markdown-it-py[linkify,plugins]>=3.0.0,<4.0.0",
    "pygments>=2.13.0",
    "typing-extensions",
    "mdit-py-emoji>=0.1.1",
]
keywords = ["graia", "graiax", "text2img", "playwright"]
requires-python = ">=3.8.1"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
repository = "https://github.com/GraiaCommunity/graiax-text2img-playwright"

[project.optional-dependencies]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=5.0.4",
    "black>=23.3.0",
    "isort>=5.10.1",
]

[tool.pdm.build]
package-dir = "src"
includes = ["src/graiax"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
