[project]
name = "graiax-text2img-playwright"
version = "0.4.3"
description = "基于 Playwright 的适用于 Graia 的文转图工具"
authors = [
    {name = "Redlnn", email = "w731347477@gmail.com"},
    {name = "BlueGlassBlock", email = "blueglassblock@outlook.com"}
]
dependencies = [
    "graiax-playwright>=0.2.6,<0.4.0",
    "launart>=0.6.4",
    "markdown-it-py[linkify,plugins]>=3.0.0",
    "pygments>=2.16.1",
    "typing-extensions>=4.7.1",
    "mdit-py-emoji>=0.1.1",
]
keywords = ["graia", "graiax", "text2img", "playwright"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
repository = "https://github.com/GraiaCommunity/graiax-text2img-playwright"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=6.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "launart>=0.8.1",
]

[tool.pdm.build]
package-dir = "src"
includes = ["src/graiax"]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py39"
select = [
    # https://beta.ruff.rs/docs/rules
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    # "I",  # isort
    # "D",  # pydocstyle
    "ASYNC", # flake8-async
]
exclude = [".git", ".venv", "__pypackages__", "dist"]
ignore = ["F401"]

[tool.ruff.pydocstyle]
convention = "google"
