[project]
name = "graiax-text2img-playwright"
version = "0.5.0"
description = "基于 Playwright 的适用于 Graia 的文转图工具"
authors = [
    {name = "Redlnn", email = "w731347477@gmail.com"},
    {name = "BlueGlassBlock", email = "blueglassblock@outlook.com"}
]
dependencies = [
    "graiax-playwright>=0.4.1",
    "markdown-it-py[linkify,plugins]>=3.0.0",
    "pygments>=2.17.2",
    "mdit-py-emoji>=0.1.1",
]
keywords = ["graia", "graiax", "text2img", "playwright"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
repository = "https://github.com/GraiaCommunity/graiax-text2img-playwright"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=6.1.0",
    "black>=23.12.0",
    "isort>=5.13.2",
]

[tool.pdm.build]
package-dir = "src"
includes = ["src/graiax"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py310"
select = [
    # https://beta.ruff.rs/docs/rules
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    # "I",  # isort
    # "D",  # pydocstyle
    "ASYNC", # flake8-async
]
exclude = [".git", ".venv", "__pypackages__", "dist"]
ignore = ["F401"]

[tool.ruff.pydocstyle]
convention = "google"
